--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,20 @@
     <artifactId>lab4_ppd</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <properties>
+        <spring.version>3.1.1.RELEASE</spring.version>
+    </properties>
+
+    <dependencies>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    </dependencies>
 </project>
